welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: illegal start of simple expression
  if ((a<=20 && a>=10) && b<=20 && b>=10)) {return Math.max(a,b)}
                                         ^